# StellarFlow

./: .env.render.example  .env.vercel.example  .gitignore  README.md  SECURITY_POLICY.md  docker-compose.yml  firebase-applet-config.json  fix_tags.js  next.config.ts  package-lock.json  package.json  query_dest.js  railway.toml  railway_deployment_guide.md  render.yaml  stellarflow_submission.fdb_latexmk  stellarflow_submission.fls  stellarflow_submission.tex  test_submit.js  tsconfig.json  update_ui.js  vercel_deployment_guide.md
.github/workflows/: ci.yml  stellar-deploy.yml
__tests__/: stellar.test.ts
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx
app/analytics/: page.tsx
app/api/batch/: route.ts
app/approvals/: page.tsx
app/batch/: page.tsx
app/routing/: page.tsx
app/settings/: page.tsx
app/transit/: page.tsx
app/treasury/: page.tsx
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  railway.json
backend/.cargo/: config.toml
backend/contracts/: Cargo.toml
backend/contracts/src/: lib.rs
backend/contracts/test_snapshots/tests/: test_add_vault_unauthorized.1.json  test_add_vault_wallet.1.json  test_approve_proposal_reaches_threshold_and_executes.1.json  test_double_approval_rejected.1.json  test_duplicate_vault_blocked.1.json  test_initialize_sets_admin.1.json  test_propose_transfer_creates_proposal.1.json  test_reinitialize_reverts.1.json  test_route_payout_exceeds_limit.1.json  test_route_payout_no_vaults_panics.1.json
backend/src/: config.rs  errors.rs  main.rs
backend/src/auth/: crypto.rs  mod.rs
backend/src/database/: migration_c5.sql  migration_e.sql  migration_f.sql  migration_g.sql  mod.rs  models.rs  schema.sql  seed.rs
backend/src/database/queries/: mod.rs  transactions.rs  wallets.rs
backend/src/routes/: approvals.rs  funding.rs  governance.rs  jit.rs  mod.rs  payments.rs  soroban_proposals.rs  system.rs  transactions.rs  treasury.rs  wallets.rs
backend/src/stellar/: horizon_client.rs  jit_aggregator.rs  mod.rs  sequence_manager.rs  transaction_builder.rs
backend/src/streaming/: mod.rs  transit_engine.rs
components/: BootExperienceScreens.tsx  BootFluidLens.tsx  BootSequence.tsx  BootSequenceComponents.tsx  GalaxyBackground.tsx  IntroScreen.tsx  RecruiterModals.tsx  Silk.tsx  contract-desk.tsx  pwa-registry.tsx  shell.tsx  theme-toggle.tsx  treasury-router.tsx
components/ui/: account-switcher-modal.tsx  bento-card.tsx  carousel.tsx  gooey-nav.tsx
components/views/: analytics-view.tsx  batch-view.tsx  dashboard-view.tsx  funding-view.tsx  governance-view.tsx  history-view.tsx  multisig-view.tsx  overview-view.tsx  routing-view.tsx  settings-view.tsx  transfer-view.tsx  transit-view.tsx  treasury-view.tsx
docs/: coreconcept.md  index.md
docs/.obsidian/: workspace.json
docs/architecture/: flutter-stellarflow-os.md  flutter-wallet-structure.md  monorepo-structure.md
docs/backend/: postgresql-database.md  rust-api-architecture.md
docs/contracts/: smart-routing.md  soroban-smart-contracts.md  treasury-vault-contract.md
docs/core-logic/: decentralized-auth.md
docs/data/: database-schema.md  on-chain-state.md
docs/integrations/: cross-platform-bridge.md
docs/network/: rpc-pipeline.md  transaction-lifecycle.md
docs/nextjs/: pages-and-routing.md  ui-components.md
docs/specifications/: ui-deck-spec.md
docs/stellar/: horizon-and-rpc.md  transaction-mechanics.md
hooks/: use-mobile.ts
lib/: firebase.ts  mock-data.ts  stellar-kit.ts  stellar.ts  wallet-kit.ts
lib/stores/: account-store.ts  approval-store.ts  transaction-store.ts  treasury-store.ts
mobile/: pubspec.yaml
public/: demo-batch.csv  sw.js
scratch/: test_add_vault.js
scripts/: .deployer_secret  build_contract.js  check_balances.js  check_balances2.js  check_proposal.js  check_proposals.js  create_proposal.js  debug_state.js  deploy_soroban.js  fix.py  fix2.py  get_public_key.js  grant_vault_allowance.js  query.js  query_admin.js  register_vaults.js  simulate_approve.js  test_payout.js
shared-core/: README.md
