[workspace]
members = [
    ".",
    "contracts",
]
resolver = "2"

[package]
name = "stellarflow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database – async, compile-time verified queries
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
] }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Stellar Horizon / RPC + XDR
stellar-base = "0.5"
stellar-horizon = "0.7"

# Crypto
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
