[workspace]
members = [
    ".",
    "contracts",
]
resolver = "2"

# ─── Workspace-level package metadata ─────────────────────────────────────────
# All member crates inherit these unless overridden locally.
[workspace.package]
edition     = "2021"
rust-version = "1.78"   # MSRV — Polonius borrow-checker improvements

# ─── Shared dependency versions (re-exported by members via `workspace = true`)
[workspace.dependencies]
serde      = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing    = "0.1.40"
thiserror  = "1.0.61"
anyhow     = "1.0.86"
uuid       = { version = "1.8.0",  features = ["v4", "serde"] }
chrono     = { version = "0.4.38", features = ["serde"] }

# ─────────────────────────────────────────────────────────────────────────────
[package]
name    = "stellarflow-backend"
version = "0.1.0"
edition = "2021"

# ─────────────────────────────────────────────────────────────────────────────
# DEPENDENCIES
# ─────────────────────────────────────────────────────────────────────────────

[dependencies]

# ── Async Runtime ─────────────────────────────────────────────────────────────
# "full" = rt-multi-thread + io + net + sync + time + signal + macros.
# NEVER use "current_thread" — it serialises all payroll workers onto one OS
# thread, destroying the concurrency model of payroll_dispatcher.rs.
tokio = { version = "1.38", features = ["full"] }

# ── HTTP Framework ────────────────────────────────────────────────────────────
# "macros"    → #[debug_handler] for compile-time handler type validation
# "ws"        → WebSocket upgrade required by transit_engine.rs
# "multipart" → future batch CSV upload support
axum       = { version = "0.7.5",  features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9.3",  features = ["typed-header"] }
tower      = { version = "0.4.13", features = ["full"] }
# "limit"          → enforces max body size on batch payroll payloads (OOM guard)
# "compression-gzip" → compress large analytics response bodies
tower-http = { version = "0.5.2",  features = ["cors", "trace", "compression-gzip", "limit"] }
hyper      = { version = "1.3",    features = ["full"] }

# ── Database ──────────────────────────────────────────────────────────────────
# "runtime-tokio-rustls" → pure Rust TLS — no OpenSSL system dependency
# "macros"               → query_as! compile-time SQL verification against DB
# "migrate"              → sqlx::migrate!() directory runner
# "bigdecimal"           → NUMERIC(20,7) financial precision columns
# "json"                 → serde_json Value in JSONB columns (source_breakdown)
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "macros",
    "migrate",
] }

# ── Cache / Pub-Sub ───────────────────────────────────────────────────────────
# "connection-manager" → auto-reconnect on network partition — CRITICAL for
#   payroll batches; without it a 200ms Redis blip panics the entire worker pool
# "cluster-async"      → future-proof for Redis Cluster topology
redis = { version = "0.25.3", features = [
    "tokio-comp",
    "connection-manager",
    "cluster-async",
] }

# ── Authentication ────────────────────────────────────────────────────────────
# Firebase Admin approach: fetch JWKS at startup, cache public keys in AppState,
# verify RS256 JWT locally — zero network hop per request.
jsonwebtoken = "9.3.0"

# ── Stellar XDR ───────────────────────────────────────────────────────────────
# REPLACES stellar-base = "0.5" and stellar-horizon = "0.7".
# Those two crates pull conflicting internal XDR type generations → untraceable
# "trait From not implemented" linker errors (Risk-2 in architecture doc).
# stellar-xdr gives full encode/decode; Horizon REST calls are built via reqwest.
stellar-xdr = { version = "27.0.0", features = ["std", "serde"] }

# ── HTTP Client (Horizon + Soroban RPC) ───────────────────────────────────────
# "rustls-tls" → eliminates OpenSSL system dependency (matches sqlx above)
# "stream"     → enables Horizon SSE streaming for live ledger events
# "gzip"       → decompress Horizon/Soroban responses automatically
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "stream", "gzip"] }

# ── Cryptography ──────────────────────────────────────────────────────────────
# ed25519-dalek: canonical audited Ed25519 library (Stellar signing algorithm).
# Used in transaction_builder.rs to sign PaymentOp envelopes server-side.
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

# aes-gcm: AES-256-GCM for encrypting channel account secret keys at rest.
# CRITICAL: always prepend a fresh random 12-byte nonce before the ciphertext.
# Static or reused nonces allow keystream recovery (Risk-5 in architecture doc).
aes-gcm = "0.10.3"

# Cryptographically secure random number generation (nonce generation, key derivation)
rand = "0.8.5"

# ── Rate Limiting ─────────────────────────────────────────────────────────────
# Token bucket limiter for Soroban RPC calls (~100 req/min testnet limit).
# Prevents 429 exhaustion during large payroll simulations (Risk-6).
governor = "0.6.3"

# ── Serialization ─────────────────────────────────────────────────────────────
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = "0.8.13"

# ── Async Utilities ───────────────────────────────────────────────────────────
futures      = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
async-trait  = "0.1.80"
pin-project  = "1.1.5"

# ── Observability ─────────────────────────────────────────────────────────────
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "fmt"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid       = { workspace = true }
chrono     = { workspace = true }
bigdecimal = { version = "0.3.1", features = ["serde"] }
dotenvy    = "0.15.7"
once_cell  = "1.19.0"
thiserror  = { workspace = true }
anyhow     = { workspace = true }
base64     = "0.22.1"
hex        = "0.4.3"
sha2       = "0.10.8"
stellar-strkey = "0.0.8"

# ─────────────────────────────────────────────────────────────────────────────
# RELEASE PROFILE
# Aggressive optimisation for production binary.
# lto = "thin"    → cross-crate inlining without full LTO compile-time penalty
# strip           → removes debug symbols, reduces binary size ~40%
# codegen-units=1 → single codegen unit for maximum LLVM optimisation
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
